@@ -1,8 +1,14 @@
 Version 1.3.x - xx xxx 2009
 
   * Clean up autoconf warnings. Enable -fPIC as default.
-    Attempt to detect Java Home. Ticket #83.
+
+  * Attempt to detect Java Home. Ticket #83.
+
+  * Check for SWIG dependent language headers before 
+    enabling that language. Ticket #88.
+
   * Add PERL to "make install". Ticket #103.
+
   * Clean up g++ deprecation warnings. Ticket #104.
 
 Version 1.3.1 - 18 Mar 2009
